--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,13 @@ databases:
   - name: mysite
     databaseName: mysite
     user: mysite
-    plan: free
+    plan: starter
 
 services:
   - type: web
     name: mysite
     env: ruby
-    plan: free
+    plan: starter
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
